--- a/MediaManagementSystem/pom.xml
+++ b/MediaManagementSystem/pom.xml
@@ -9,7 +9,6 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-    <spring.version>4.3.3.RELEASE</spring.version>
     <hibernate.version>5.2.3.Final</hibernate.version>
     <dbcp.version>1.4</dbcp.version>
   </properties>
@@ -21,24 +20,6 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
-    <!-- Spring dependencies -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-web</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-webmvc</artifactId>
-      <version>${spring.version}</version>
     </dependency>
 
     <!-- Hibernate -->
@@ -67,20 +48,11 @@
       <version>${dbcp.version}</version>
     </dependency>
 
-    <!-- Spring + aspects -->
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-aspects</artifactId>
-      <version>${spring.version}</version>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.30</version>
     </dependency>
-
-    <!-- ORM integration, e.g Hibernate -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-orm</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-
 
   </dependencies>
 
